--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -10,17 +10,22 @@ jobs:
       AUTOMATION_GITHUB_TOKEN: ${{ secrets.AUTOMATION_GITHUB_TOKEN }}
     steps:
     - uses: actions/checkout@v2
-    - name: Cache Python dependencies
-      uses: actions/cache@v2
-      with:
-        path: ~\AppData\Local\pip\Cache
-        key: windows-pip-release-${{ hashFiles('**/requirements.txt', '**/PKG-INFO') }}
     - name: Set up Python 3.10 (64bit)
       uses: actions/setup-python@v2
       with:
         python-version: "3.10"
         architecture: "x64"
+    - name: Cache Python virtualenv (64bit)
+      uses: syphar/restore-virtualenv@v1.2
+      id: cache-virtualenv-64bit
+      with:
+        custom_virtualenv_dir: "venv64"
+        custom_cache_key_element: "release"
+        requirement_files: |
+          **/requirements.txt
+          PKG-INFO
     - name: Install Python dependencies (64bit)
+      if: steps.cache-virtualenv-64bit.outputs.cache-hit != 'true'
       run: |
         python --version
         pip install --upgrade pip wheel
@@ -47,23 +52,29 @@ jobs:
         name: Windows installer
     - name: Set up Python 3.8 (32bit and legacy)
       uses: actions/setup-python@v2
-      if: startsWith(github.ref, 'refs/tags/')
       with:
         python-version: "3.8"
         architecture: "x86"
+    - name: Cache Python virtualenv (32bit and legacy)
+      uses: syphar/restore-virtualenv@v1.2
+      id: cache-virtualenv-32bit
+      with:
+        custom_virtualenv_dir: "venv32"
+        custom_cache_key_element: "release"
+        requirement_files: |
+          **/requirements.txt
+          PKG-INFO
     - name: Install Python dependencies (32bit and legacy)
-      if: startsWith(github.ref, 'refs/tags/')
+      if: steps.cache-virtualenv-32bit.outputs.cache-hit != 'true'
       run: |
         python --version
         pip install --upgrade pip wheel
         pip install --upgrade -r requirements.txt
         pip install --upgrade -r builder/requirements.txt
     - name: Build Windows standalone binary (32bit and legacy)
-      if: startsWith(github.ref, 'refs/tags/')
       run: python builder/package.py binary
     - name: Upload Windows standalone binary (32bit and legacy)
       uses: actions/upload-artifact@v2
-      if: startsWith(github.ref, 'refs/tags/')
       with:
         path: "*-win32-bin.zip"
         name: Windows Windows standalone binary (32bit and legacy)
@@ -98,12 +109,18 @@ jobs:
       if: steps.cache-python-download.outputs.cache-hit != 'true'
       run: curl https://www.python.org/ftp/python/${PYTHON_VERSION}/python-${PYTHON_VERSION}-macos11.pkg -o ~/python.pkg
     - name: Install Python
-      run: sudo installer -pkg ~/python.pkg -target /
-    - name: Cache Python dependencies
-      uses: actions/cache@v2
+      run: |
+        sudo installer -pkg ~/python.pkg -target /
+        unlink /usr/local/bin/python
+        ln -s /usr/local/bin/python3 /usr/local/bin/python
+    - name: Cache Python virtualenv
+      uses: syphar/restore-virtualenv@v1.2
+      id: cache-virtualenv
       with:
-        path: ~/Library/Caches/pip
-        key: macos-pip-release-${{ hashFiles('**/requirements.txt', '**/PKG-INFO') }}
+        custom_cache_key_element: "release"
+        requirement_files: |
+          **/requirements.txt
+          PKG-INFO
     - name: Install Python dependencies
       # We have to manually install a few packages:
       # 1.  cffi will pick up the single-arch libffi from Homebrew, while Apple provides universal2-version
@@ -113,6 +130,7 @@ jobs:
       #     https://github.com/pyca/cryptography/issues/5918
       # 3.  We need to build the PyInstaller bootloader from sources:
       #     https://github.com/pyinstaller/pyinstaller/issues/6235
+      if: steps.cache-virtualenv.outputs.cache-hit != 'true'
       run: |
         python3 --version
         pip3 install --upgrade pip wheel
