--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -1,9 +1,11 @@
 # Basic build requirements
-pyinstaller>=4.8
+# Note that not all sub-dependencies are listed, but only ones we know could cause trouble
+pyinstaller==4.8
+pyinstaller-hooks-contrib==2022.0
 setuptools
 pkginfo
 certifi
 pygithub
 
 # For the OSX build specific
-dmgbuild; sys_platform == 'darwin'
+dmgbuild==1.5.2; sys_platform == 'darwin'
