--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -2,7 +2,9 @@
 # Note that not all sub-dependencies are listed, but only ones we know could cause trouble
 pyinstaller==4.8
 pyinstaller-hooks-contrib==2022.0
-setuptools
+altgraph==0.17.2
+wrapt==1.13.3
+setuptools==60.6.0
 pkginfo
 certifi
 pygithub
