--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ pycparser==2.21
 feedparser==6.0.8
 configobj==5.0.6
 cheroot==8.6.0
+six==1.16.0
 cherrypy==18.6.1
 jaraco.functools==3.5.0
 jaraco.collections==3.5.1
@@ -15,12 +16,17 @@ jaraco.text==3.7.0
 jaraco.classes==3.2.1
 jaraco.context==4.1.1
 more-itertools==8.12.0
+zc.lockfile==2.0
+python-dateutil==2.8.2
 tempora==5.0.1
+pytz==2021.3
+sgmllib3k==1.0.0
 portend==3.1.0
 chardet==4.0.0
 PySocks==1.7.1
 puremagic==1.11
 guessit==3.4.3
+babelfish==0.6.0
 rebulk==3.1.0
 
 # Windows system integration
