Let PyInstaller sign the macOS executable and the app
It signs the binaries anyway, so let it do it properly.
Verify signature applied by PyInstaller

--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -15,6 +15,7 @@ jobs:
             scripts
             tools
             builder
+            builder/SABnzbd.spec
             tests
             --line-length=120
             --target-version=py37
