--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -139,7 +139,7 @@ jobs:
         
         brew uninstall libffi --ignore-dependencies
         ARCHFLAGS="-arch x86_64 -arch arm64" pip3 install --upgrade cffi --no-binary cffi
-        pip3 install --upgrade -r requirements.txt --no-binary sabyenc3
+        pip3 install --upgrade -r requirements.txt
         
         pip3 uninstall cryptography -y
         pip3 download -r builder/osx/requirements.txt --platform macosx_10_10_universal2 --only-binary :all: --no-deps --dest .
