--- a/tests/data/tavern/api_queue_empty.yaml
+++ b/tests/data/tavern/api_queue_empty.yaml
@@ -51,7 +51,6 @@ stages:
           noofslots_total: 0
           status: "Idle"
           timeleft: "0:00:00"
-          eta: "unknown"
           scripts: !anylist
           categories: !anylist
           noofslots: 0
@@ -87,7 +86,7 @@ stages:
           # Verify only a bunch of key response parameters with a regex using
           # positive looksaheads, so parameters match regardless of their order
           # of appearance in the text output
-          expression: "^{{(?=.*'version': '{SAB_VERSION}')(?=.*'noofslots_total': 0)(?=.*'status': 'Idle')(?=.*'timeleft': '0:00:00')(?=.*'eta': 'unknown')(?=.*'noofslots': 0)(?=.*'slots': \\[\\]).*}}$"
+          expression: "^{{(?=.*'version': '{SAB_VERSION}')(?=.*'noofslots_total': 0)(?=.*'status': 'Idle')(?=.*'timeleft': '0:00:00')(?=.*'noofslots': 0)(?=.*'slots': \\[\\]).*}}$"
 
 
 ---
@@ -145,7 +144,6 @@ stages:
             <noofslots_total>0</noofslots_total>
             <status>Idle</status>
             <timeleft>0:00:00</timeleft>
-            <eta>unknown</eta>
             <scripts>!anystr</scripts>
             <categories>!anystr</categories>
             <noofslots>0</noofslots>
