--- a/tests/data/tavern/api_history_format.yaml
+++ b/tests/data/tavern/api_history_format.yaml
@@ -132,7 +132,7 @@ stages:
             <name>!anystr</name>
             <nzb_name>!anystr</nzb_name>
             <category>!anystr</category>
-            <pp>!anything</pp>
+            <pp>!anystr</pp>
             <script>!anystr</script>
             <report></report>
             <url>!anystr</url>
@@ -146,7 +146,7 @@ stages:
             <postproc_time>!anyint</postproc_time>
             <stage_log>!anystr</stage_log>
             <downloaded>!anyint</downloaded>
-            <completeness>None</completeness>
+            <completeness>!anything</completeness>
             <fail_message>!anystr</fail_message>
             <url_info>!anystr</url_info>
             <bytes>!anyint</bytes>
