--- a/tests/data/tavern/api_queue_empty.yaml
+++ b/tests/data/tavern/api_queue_empty.yaml
@@ -129,7 +129,7 @@ stages:
             <speedlimit>!anyint</speedlimit>
             <speedlimit_abs>!anystr</speedlimit_abs>
             <have_warnings>!anyint</have_warnings>
-            <finishaction>None</finishaction>
+            <finishaction>!anything</finishaction>
             <quota>!anystr</quota>
             <have_quota>!anybool</have_quota>
             <left_quota>!anystr</left_quota>
