--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -33,13 +33,6 @@ jobs:
         pip install --upgrade pip wheel
         pip install --upgrade -r requirements.txt
         pip install --upgrade -r builder/requirements.txt
-    - name: Build source distribution
-      run: python builder/package.py source
-    - name: Upload source distribution
-      uses: actions/upload-artifact@v3
-      with:
-        path: "*-src.tar.gz"
-        name: Source distribution
     - name: Build Windows standalone binary and installer (64bit)
       run: python builder/package.py installer
     - name: Upload Windows standalone binary (64bit)
@@ -152,6 +145,14 @@ jobs:
       with:
         p12-file-base64: ${{ secrets.CERTIFICATES_P12 }}
         p12-password: ${{ secrets.CERTIFICATES_P12_PASSWORD }}
+    - name: Build source distribution
+      # Run this on macOS so the line endings are correct by default
+      run: python builder/package.py source
+    - name: Upload source distribution
+      uses: actions/upload-artifact@v3
+      with:
+        path: "*-src.tar.gz"
+        name: Source distribution
     - name: Build macOS binary
       run: |
         python3 builder/package.py app
