--- a/.github/workflows/integration_testing.yml
+++ b/.github/workflows/integration_testing.yml
@@ -63,6 +63,7 @@ jobs:
       run: |
         python --version
         pip install --upgrade -r requirements.txt
+        pip install --upgrade -r builder/requirements.txt
         pip install --upgrade -r tests/requirements.txt
     - name: Test SABnzbd
       run: pytest -s
