--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -11,6 +11,7 @@ charset-normalizer==2.0.12
 certifi
 
 # orjson does not support 32bit Windows, exclude it based on Python-version
+# This way we also test ujson on Python 3.7 and 3.8 in the CI-tests
 orjson==3.7.2; python_version > '3.8'
 
 # For the macOS build
