--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -1,17 +1,18 @@
 # Basic build requirements
 # Note that not all sub-dependencies are listed, but only ones we know could cause trouble
-pyinstaller==5.1
-pyinstaller-hooks-contrib==2022.5
+pyinstaller==5.3
+pyinstaller-hooks-contrib==2022.8
 altgraph==0.17.2
 wrapt==1.14.1
-setuptools==62.3.2
-pkginfo==1.8.2
+setuptools==63.3.0
+pkginfo==1.8.3
 PyGithub==1.55
-charset-normalizer==2.0.12
+charset-normalizer==2.1.0
 certifi
 
 # orjson does not support 32bit Windows, exclude it based on Python-version
-orjson==3.6.8; python_version > '3.8'
+# This way we also test ujson on Python 3.7 and 3.8 in the CI-tests
+orjson==3.7.11; python_version > '3.8'
 
 # For the macOS build
 dmgbuild==1.5.2; sys_platform == 'darwin'
