--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,23 +1,33 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base"
-  ],
-  "schedule": [
-    "before 3am on Monday"
-  ],
-  "ignorePaths": ["tests/**", ".github/workflows/**"],
-  "pip_requirements": {
-    "fileMatch": ["requirements.txt", "builder/requirements.txt", "builder/osx/requirements.txt"]
-  },
-  "packageRules": [
-    {
-      "matchPackagePatterns": ["*"],
-      "groupName": "all dependencies",
-      "groupSlug": "all",
-      "automerge": true
-    }
-  ],
-  "automergeStrategy": "squash",
-  "platformAutomerge": true
+   "$schema":"https://docs.renovatebot.com/renovate-schema.json",
+   "extends":[
+      "config:base",
+      ":disableDependencyDashboard"
+   ],
+   "schedule":[
+      "before 3am on Monday"
+   ],
+   "ignorePaths":[
+      "tests/**",
+      ".github/workflows/**"
+   ],
+   "pip_requirements":{
+      "fileMatch":[
+         "requirements.txt",
+         "builder/requirements.txt",
+         "builder/osx/requirements.txt"
+      ]
+   },
+   "packageRules":[
+      {
+         "matchPackagePatterns":[
+            "*"
+         ],
+         "groupName":"all dependencies",
+         "groupSlug":"all",
+         "automerge":true
+      }
+   ],
+   "automergeStrategy":"squash",
+   "platformAutomerge":true
 }
