Pin jaraco.text to lower version due to irrelevant extra dependencies

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -18,6 +18,9 @@
          "builder/osx/requirements.txt"
       ]
    },
+   "ignoreDeps":[
+      "jaraco.text"
+   ],
    "packageRules":[
       {
          "matchPackagePatterns":[
