--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -1,7 +1,6 @@
 # Basic build requirements
 # Note that not all sub-dependencies are listed, but only ones we know could cause trouble
-pyinstaller==5.5; python_version < '3.11'
-git+https://github.com/pyinstaller/pyinstaller.git; python_version > '3.10'
+pyinstaller==5.5
 pyinstaller-hooks-contrib==2022.10
 altgraph==0.17.3
 wrapt==1.14.1
