--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -18,17 +18,12 @@ jobs:
       - name: Generate translatable texts
         run: |
           python3 tools/extract_pot.py
-      - name: Install Transifex client
-        if: env.TX_TOKEN
-        # Sudo is needed to link the "tx"-command
-        run: |
-          sudo -H python3 -m pip install setuptools wheel
-          sudo -H python3 -m pip install transifex-client
       - name: Push/pull Transifex translations
         if: env.TX_TOKEN
         run: |
-          tx push --source --parallel
-          tx pull --all --force --parallel
+          curl -o- https://raw.githubusercontent.com/transifex/cli/master/install.sh | bash
+          ./tx push --source
+          ./tx pull --all --force
       - name: Compile translations to validate them
         run: |
           python3 tools/make_mo.py
@@ -42,4 +37,5 @@ jobs:
           commit_user_name: SABnzbd Automation
           commit_user_email: bugs@sabnzbd.org
           commit_author: SABnzbd Automation <bugs@sabnzbd.org>
+          file_pattern: "po/*.pot po/*.po"
           push_options: --force
