--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Set up Python 3.11 (64bit)
       uses: actions/setup-python@v4
       with:
-        python-version: "3.11.0-rc.2"
+        python-version: "3.11"
         architecture: "x64"
     - name: Cache Python virtualenv (64bit)
       uses: syphar/restore-virtualenv@v1.3
@@ -102,10 +102,10 @@ jobs:
       uses: actions/cache@v3
       with:
         path: ~/python.pkg
-        key: macOS-Python-${{ env.PYTHON_VERSION }}
+        key: cache-macOS-Python-${{ env.PYTHON_VERSION }}
     - name: Get Python
       if: steps.cache-python-download.outputs.cache-hit != 'true'
-      run: curl https://www.python.org/ftp/python/${PYTHON_VERSION}/python-${PYTHON_VERSION}rc2-macos11.pkg -o ~/python.pkg
+      run: curl https://www.python.org/ftp/python/${PYTHON_VERSION}/python-${PYTHON_VERSION}-macos11.pkg -o ~/python.pkg
     - name: Install Python
       run: |
         sudo installer -pkg ~/python.pkg -target /
