--- a/.github/workflows/integration_testing.yml
+++ b/.github/workflows/integration_testing.yml
@@ -31,14 +31,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11.0-rc.2"]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
         os: [ubuntu-20.04]
         include:
           - name: macOS
             os: macos-latest
-            python-version: "3.10"
+            python-version: "3.11"
           - name: Windows
             os: windows-latest
+            # lxml is not yet available for Python 3.11, so CI is stuck on 3.10 for now
             python-version: "3.10"
 
     steps:
@@ -47,6 +48,7 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+        architecture: "x64"
     - name: Install system dependencies
       if: runner.os == 'Linux'
       run: sudo apt-get install unrar p7zip-full par2
