Apply changes need for updates to buffer_decode

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Main requirements
 # Note that not all sub-dependencies are listed, but only ones we know could cause trouble
-git+https://github.com/sabnzbd/sabyenc.git@buffer
+git+https://github.com/sabnzbd/sabyenc.git@openssl_link
 cheetah3==3.2.6.post1
 cffi==1.15.1
 pycparser==2.21
