--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -11,7 +11,7 @@ charset-normalizer==3.0.1
 certifi
 
 # orjson does not support 32bit Windows, exclude it based on Python-version
-# This way we also test ujson on Python 3.7 and 3.8 in the CI-tests
+# This way we also test ujson on Python 3.8 in the CI-tests
 orjson==3.8.5; python_version > '3.8'
 
 # For the macOS build
