--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -11,6 +11,6 @@ flaky
 xmltodict
 tavern<2.0.0 # tavalidate does not support tavern 2.0.0+
 tavalidate
-importlib_metadata<5.0.0 # Required by tavern but 5.0.0 is not compatible with Python 3.7
+importlib_metadata
 lxml
 black
