Revert "Make renovate config less strict on when it runs on Monday"
This reverts commit a1d51502c468c639ede5b40c886530e508b7faf0.

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -5,7 +5,7 @@
     ":disableDependencyDashboard"
   ],
   "schedule": [
-    "on Monday"
+    "before 3am on Monday"
   ],
   "ignorePaths": [
     "tests/**",
