Make renovate config less strict on when it runs on Monday

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -5,7 +5,7 @@
     ":disableDependencyDashboard"
   ],
   "schedule": [
-    "before 3am on Monday"
+    "on Monday"
   ],
   "ignorePaths": [
     "tests/**",
