--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -32,7 +32,7 @@ jobs:
       if: steps.cache-virtualenv-64bit.outputs.cache-hit != 'true'
       run: |
         python --version
-        pip install --upgrade pip wheel
+        python -m pip install --upgrade pip wheel
         pip install --upgrade -r requirements.txt
         pip install --upgrade -r builder/requirements.txt
     - name: Build Windows standalone binary and installer (64bit)
