--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -28,7 +28,7 @@ parts:
     source: .
     requirements: [snap/local/requirements_snap.txt, requirements.txt]
     stage-packages: [python3-dev, libdb5.3, unrar, p7zip-full, par2]
-    build-packages: [libffi-dev, python3-dev, libssl-dev, cargo]
+    build-packages: [pkg-config, libffi-dev, python3-dev, libssl-dev, cargo]
     override-build: |
       snapcraftctl set-version $(grep -oP '(?<=^Version: ).*' PKG-INFO)
       snapcraftctl build
