Move release actions to separate build step

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -15,6 +15,7 @@
     "fileMatch": [
       "requirements.txt",
       "builder/requirements.txt",
+      "builder/release-requirements.txt",
       "builder/osx/requirements.txt"
     ]
   },
