--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -4,7 +4,6 @@ on: [push, pull_request]
 
 # Setting PYTHONNODEBUGRANGES reduces binary size
 env:
-  AUTOMATION_GITHUB_TOKEN: ${{ secrets.AUTOMATION_GITHUB_TOKEN }}
   PYTHONNODEBUGRANGES: 1
 
 jobs:
@@ -75,9 +74,6 @@ jobs:
       with:
         path: "*-win32-bin.zip"
         name: Windows Windows standalone binary (32bit and legacy)
-    - name: Prepare official release
-      if: env.AUTOMATION_GITHUB_TOKEN && startsWith(github.ref, 'refs/tags/')
-      run: python builder/package.py release
 
   build_macos:
     name: Build macOS binary
@@ -171,23 +167,34 @@ jobs:
       with:
         path: "*-osx.dmg"
         name: macOS binary (not notarized)
-    - name: Prepare official release
-      if: env.AUTOMATION_GITHUB_TOKEN && startsWith(github.ref, 'refs/tags/')
-      run: python3 builder/package.py release
 
-  release_snap:
-    name: Release Snap
+  release:
+    name: Publish Release
     runs-on: ubuntu-latest
+    needs: [build_windows, build_macos]
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
-    env:
-      SNAPCRAFT_STORE_CREDENTIALS: ${{ secrets.SNAP_TOKEN }}
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.x"
+      - name: Download all artifacts
+        uses: actions/download-artifact@v3
+        with:
+          path: dist
+      - name: Move all artifacts to main folder
+        run: find dist -type f -exec mv {} . \;
+      - name: Prepare official release
+        env:
+          AUTOMATION_GITHUB_TOKEN: ${{ secrets.AUTOMATION_GITHUB_TOKEN }}
+          REDDIT_TOKEN: ${{ secrets.REDDIT_TOKEN }}
+        run: |
+          pip3 install -r builder/release-requirements.txt
+          python3 builder/release.py
       - name: Release latest available Snap
+        env:
+          SNAPCRAFT_STORE_CREDENTIALS: ${{ secrets.SNAP_TOKEN }}
         run: |
           sudo snap install snapcraft --classic
           python3 snap/local/release_snap.py
