--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -11,6 +11,10 @@ certifi
 # This way we also test ujson on Python 3.8 in the CI-tests
 orjson==3.8.12; python_version > '3.8'
 
+# For the Windows build
+pefile==2023.2.7; sys_platform == 'win32'
+pywin32-ctypes==0.2.0; sys_platform == 'win32'
+
 # For the macOS build
 dmgbuild==1.6.1; sys_platform == 'darwin'
 mac-alias==2.2.2; sys_platform == 'darwin'
