--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,5 +1,7 @@
 name: Bug report
-description: Did you discover a bug in SABnzbd? Rapport it here!
+description: >
+  Did you discover a bug in SABnzbd? Report it here!
+  If you are not 100% certain this is a bug please go to our forums, Reddit or Discord server first.
 labels:
   - Bug
 body:
@@ -13,6 +15,13 @@ body:
       label: Operating system
     validations:
       required: true
+  - type: dropdown
+    attributes:
+      label: Using Docker image
+      options:
+        - linuxserver
+        - hotio
+        - Other
   - type: textarea
     attributes:
       label: Description
