--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,8 @@ ujson==5.8.0
 pywin32==306; sys_platform == 'win32'
 
 # macOS system calls
-pyobjc==9.2; sys_platform == 'darwin'
+pyobjc-core==10.0; sys_platform == 'darwin'
+pyobjc-framework-Cocoa==10.0; sys_platform == 'darwin'
 
 # Linux notifications
 notify2==0.3.1; sys_platform != 'win32' and sys_platform != 'darwin'
