--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -1,6 +1,7 @@
 # Basic build requirements
 # Note that not all sub-dependencies are listed, but only ones we know could cause trouble
-pyinstaller==5.13.2
+pyinstaller==6.1.0
+packaging==23.2
 pyinstaller-hooks-contrib==2023.9
 altgraph==0.17.4
 wrapt==1.15.0
